--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,10 @@
 %:
 	dh $@  --with python2
 
+override_dh_auto_clean:
+	dh_auto_clean
+	rm -fr swiftclient/versioninfo
+
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	set -e ; for pyversion in $(shell pyversions -r); do $$pyversion setup.py test; done
