--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,10 @@ Build-Depends: debhelper (>= 8.0.0),
  python-nose, python-prettytable,
  python-simplejson,
  python-eventlet
-Standards-Version: 3.9.2
+Standards-Version: 3.9.3
+Homepage: https://github.com/openstack/python-swiftclient
+Vcs-Git: git://git.debian.org/openstack/python-swiftclient.git
+Vcs-Browser: http://git.debian.org/?p=openstack/python-swiftclient.git;a=summary
 
 Package: python-swiftclient
 Architecture: all
