--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Architecture: all
 Depends: ${python:Depends}, ${misc:Depends},
  python-eventlet,
  python-httplib2
-Replaces: swift (< 1.6.0)
-Description: Client libary for Openstack Swift API.
+Replaces: swift (<< 1.6.0)
+Description: Client libary for Openstack Swift API
  This is a client for the OpenStack Swift API. There's a Python API 
  (the ``swiftclient`` module), and a command-line script (``swift``).
