--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,7 @@
 [DEFAULT]
 upstream-tag = %(version)s
 compression = xz
+debian-branch = debian/experimental
 
 [git-buildpackage]
 export-dir = ../build-area/
