--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,8 @@ Package: python-swiftclient
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends},
  python-eventlet,
- python-httplib2
+ python-httplib2,
+ python-keystoneclient
 Replaces: swift (<< 1.6.0)
 Description: Client libary for Openstack Swift API
  This is a client for the OpenStack Swift API. There's a Python API 
