Reviewed long description.

--- a/debian/control
+++ b/debian/control
@@ -29,5 +29,24 @@ Depends: ${python:Depends}, ${misc:Depends},
  python-keystoneclient
 Replaces: swift (<< 1.6.0)
 Description: Client libary for Openstack Swift API
- This is a client for the OpenStack Swift API. There's a Python API 
- (the ``swiftclient`` module), and a command-line script (``swift``).
+ OpenStack Object Storage (code-named Swift) creates redundant, scalable object
+ storage using clusters of standardized servers to store petabytes of
+ accessible data. It is not a file system or real-time data storage system, but
+ rather a long-term storage system for a more permanent type of static data
+ that can be retrieved, leveraged, and then updated if necessary. Primary
+ examples of data that best fit this type of storage model are virtual machine 
+ images, photo storage, email storage and backup archiving. Having no central
+ "brain" or master point of control provides greater scalability, redundancy
+ and permanence.
+ .
+ Objects are written to multiple hardware devices in the data center, with
+ the OpenStack software responsible for ensuring data replication and
+ integrity across the cluster. Storage clusters can scale horizontally by
+ adding new nodes. Should a node fail, OpenStack works to replicate its
+ content from other active nodes. Because OpenStack uses software logic to
+ ensure data replication and distribution across different devices,
+ inexpensive commodity hard drives and servers can be used in lieu of more
+ expensive equipment.
+ .
+ This package provides a client for the OpenStack Swift API. There's a Python
+ API  (the "swiftclient" module), and a command-line script ("swift").
