Added missing build-depends: python-d2to1

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Uploaders: Julien Danjou <acid@debian.org>,
 Build-Depends: debhelper (>= 9),
                openstack-pkg-tools,
                python-all (>= 2.6.6-3~),
+               python-d2to1,
                python-pbr
 Build-Depends-Indep: python-eventlet,
                      python-httplib2,
