New (build-)depends for release 2.0.2

--- a/debian/control
+++ b/debian/control
@@ -9,15 +9,15 @@ Uploaders: Julien Danjou <acid@debian.org>,
 Build-Depends: debhelper (>= 9),
                openstack-pkg-tools,
                python-all (>= 2.6.6-3~),
-               python-d2to1,
                python-pbr
 Build-Depends-Indep: python-coverage (>= 3.6),
                      python-eventlet,
                      python-httplib2,
-                     python-keystoneclient (>= 1:0.3.2),
+                     python-keystoneclient (>= 1:0.4.2),
                      python-mock (>= 1.0),
                      python-nose,
                      python-nosexcover,
+                     python-requests (>= 1.1),
                      python-setuptools,
                      python-simplejson,
                      python-sphinx (>= 1.1.2),
@@ -34,8 +34,9 @@ Pre-Depends: dpkg (>= 1.15.6~)
 Depends: python-d2to1 (>=0.2.10),
          python-eventlet,
          python-httplib2,
-         python-keystoneclient,
+         python-keystoneclient (>= 1:0.4.2),
          python-pbr,
+         python-requests (>= 1.1),
          python-simplejson,
          ${misc:Depends},
          ${python:Depends}
