Fixed (build-)depends for this release.

--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,10 @@ Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9),
                dh-python,
-               openstack-pkg-tools (>= 23~),
-               python-all (>= 2.6.6-3~),
+               openstack-pkg-tools,
+               python-all,
                python-pbr,
+               python-setuptools,
                python-sphinx,
 Build-Depends-Indep: python-concurrent.futures,
                      python-coverage,
@@ -33,6 +34,7 @@ Depends: python-concurrent.futures,
          python-pbr,
          python-requests,
          python-simplejson,
+         python-six,
          ${misc:Depends},
          ${python:Depends},
 Description: Client library for Openstack Swift API
