--- a/debian/control
+++ b/debian/control
@@ -43,6 +43,7 @@ Architecture: all
 Depends: python-concurrent.futures,
          python-keystoneclient,
          python-pbr,
+         python-pkg-resources,
          python-requests,
          python-simplejson,
          python-six,
@@ -78,6 +79,7 @@ Architecture: all
 Depends: python3-keystoneclient,
          python3-pbr,
          python3-requests,
+         python3-pkg-resources,
          python3-simplejson,
          python3-six,
          ${misc:Depends},
