d/control: Align dependencies and versions with upstream.

--- a/debian/control
+++ b/debian/control
@@ -15,17 +15,16 @@ Build-Depends: debhelper (>= 9),
                python3-setuptools,
 Build-Depends-Indep: python-concurrent.futures,
                      python-coverage,
-                     python-hacking,
+                     python-hacking (>= 0.10.0),
                      python-keystoneclient,
-                     python-mock,
+                     python-mock (>= 1.2),
                      python-oslosphinx,
                      python-requests,
-                     python-simplejson,
                      python-six,
                      python-testtools,
-                     python3-hacking,
+                     python3-hacking (>= 0.10.0),
                      python3-keystoneclient,
-                     python3-mock,
+                     python3-mock (>= 1.2),
                      python3-requests,
                      python3-simplejson,
                      python3-six,
