--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,8 @@ Build-Depends: debhelper (>= 9),
                python3-all,
                python3-pbr,
                python3-setuptools,
-Build-Depends-Indep: python-concurrent.futures,
+Build-Depends-Indep: git,
+                     python-concurrent.futures,
                      python-coverage,
                      python-hacking (>= 0.10.0),
                      python-keystoneclient,
