Changed -doc depends from ${python3:Depends} to ${sphinxdoc:Depends}

--- a/debian/control
+++ b/debian/control
@@ -108,7 +108,7 @@ Package: python-swiftclient-doc
 Section: doc
 Architecture: all
 Depends: ${misc:Depends},
-         ${python3:Depends},
+         ${sphinxdoc:Depends},
 Breaks: python-swiftclient (<< 1:2.4.0-2~)
 Replaces: python-swiftclient (<< 1:2.4.0-2~)
 Description: Client library for Openstack Swift API - doc
