--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders: Thomas Goirand <zigo@debian.org>,
            Ondřej Nový <novy@ondrej.org>,
 Build-Depends: debhelper (>= 9),
                dh-python,
-               openstack-pkg-tools,
+               openstack-pkg-tools (>= 48~),
                python-all,
                python-pbr,
                python-setuptools,
