New upstream release Bumped required version of python-keystoneclient

--- a/debian/control
+++ b/debian/control
@@ -18,13 +18,13 @@ Build-Depends: debhelper (>= 9),
 Build-Depends-Indep: python-concurrent.futures,
                      python-coverage,
                      python-hacking (>= 0.10.0),
-                     python-keystoneclient,
+                     python-keystoneclient (>= 1:0.7.0),
                      python-mock (>= 1.2),
                      python-oslosphinx,
                      python-requests,
                      python-six,
                      python3-hacking (>= 0.10.0),
-                     python3-keystoneclient,
+                     python3-keystoneclient (>= 1:0.7.0),
                      python3-mock (>= 1.2),
                      python3-requests,
                      python3-six,
