--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Build-Depends-Indep: python-concurrent.futures,
                      python-hacking (>= 0.10.0),
                      python-keystoneclient (>= 1:0.7.0),
                      python-mock (>= 1.2),
-                     python-oslosphinx,
+                     python-oslosphinx (>= 4.7.0),
                      python-requests,
                      python-six,
                      python3-hacking (>= 0.10.0),
