--- a/debian/control
+++ b/debian/control
@@ -32,8 +32,8 @@ Build-Depends-Indep: python-concurrent.futures,
                      subunit,
                      testrepository,
 Standards-Version: 3.9.8
-Vcs-Git: https://anonscm.debian.org/git/openstack/python-swiftclient.git
-Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-swiftclient.git
+Vcs-Git: https://git.openstack.org/openstack/deb-python-swiftclient -b debian/newton
+Vcs-Browser: https://git.openstack.org/cgit/openstack/deb-python-swiftclient
 Homepage: https://github.com/openstack/python-swiftclient
 Testsuite: autopkgtest-pkg-python
 
