Require futures only for Python 2 (Added upstream patch, closes: #849453)
* Require futures only for Python 2
  (Added upstream patch, closes: #849453)
* Bump required version of python-concurrent.futures,
  python{,3}-pkg-resources and python{,3}-setuptools

Change-Id: Ia6b645edaf2ad65b3d205982f96f723ed7f9be09

--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,12 @@ Build-Depends: debhelper (>= 10),
                openstack-pkg-tools (>= 48~),
                python-all,
                python-pbr,
-               python-setuptools,
+               python-setuptools (>= 20.6.8),
                python-sphinx,
                python3-all,
                python3-pbr,
-               python3-setuptools,
-Build-Depends-Indep: python-concurrent.futures,
+               python3-setuptools (>= 20.6.8),
+Build-Depends-Indep: python-concurrent.futures (>= 3.0),
                      python-coverage,
                      python-hacking (>= 0.10.0),
                      python-keystoneclient (>= 1:0.7.0),
@@ -39,9 +39,9 @@ Testsuite: autopkgtest-pkg-python
 
 Package: python-swiftclient
 Architecture: all
-Depends: python-concurrent.futures,
+Depends: python-concurrent.futures (>= 3.0),
          python-keystoneclient,
-         python-pkg-resources,
+         python-pkg-resources (>= 20.6.8),
          python-requests,
          python-six,
          ${misc:Depends},
@@ -75,7 +75,7 @@ Package: python3-swiftclient
 Architecture: all
 Depends: python3-keystoneclient,
          python3-requests,
-         python3-pkg-resources,
+         python3-pkg-resources (>= 20.6.8),
          python3-six,
          ${misc:Depends},
          ${python3:Depends},
